# MVP

./: .gitignore  CLAUDE.md  Modify 1.md  Modify 2.md  Modify 3.md  Modify 4.md  Modify 5.md  PHASE1_COMPLETE.md  Project overal.md  Project_root.md  SESSION_SUMMARY.md  labeling.md
onset_detection/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
onset_detection/config/: ml.yaml  onset_default.yaml  onset_phase1_final.yaml  window_features.yaml
onset_detection/docs/: Project_overall.md  Project_root.md
onset_detection/reports/: batch_detection_summary.json  batch_recall_results.json  detection_timing_analysis.json  discriminative_analysis.json  dual_pathway_validation.json  eval_summary.json  fp_distribution_analysis.json  gate_score_recall_results.json  gate_score_summary.json  modify3_final_decision.md  noise_analysis.json  noise_score_analysis.json  onset_quality.json  onset_quality_full.json  phase1_final_comprehensive_report.md  phase1_final_metadata.json  phase1_final_report.md  phase1_final_report_updated.md  recall_413630_validation.json  state_machine_validation.json  strategy_c_plus_dual_result.json  strict_pipeline_validation.json  surge_window_analysis.json  timing_discrepancy_analysis.json
onset_detection/scripts/: analyze_batch_results.py  analyze_candidates_threshold.py  analyze_detection_timing.py  analyze_fp_distribution.py  analyze_noise_detections.py  analyze_noise_patterns.py  analyze_surge_samples.py  analyze_surge_windows.py  apply_optimization_strategy.py  batch_detection.py  calculate_batch_recall.py  calculate_dual_pathway_recall.py  calculate_gate_score_recall.py  calculate_strict_recall.py  candidate_test.py  confirm_test.py  (+27 more)
(+114 files in other folders)
